--- a/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
+++ b/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
@@ -4,10 +4,10 @@ GENERAL_MESSAGE=Something went wrong, please check the log.
 
 #-----------SERVICE EXCEPTIONS-------------------
 
-AdminService.INVALID_CREDENTIALS = Email id or password is incorrect.
+AdminService.INVALID_CREDENTIALS = Login id or password is incorrect.
 AdminService.LOGIN_ID_ALREADY_IN_USE = The login id is already in use. Please try with a new login id
 
-TravelerService.INVALID_CREDENTIALS = Email id or password is incorrect.
+TravelerService.INVALID_CREDENTIALS = Login id or password is incorrect.
 TravelerService.LOGIN_ID_ALREADY_IN_USE = The login id is already in use. Please try with a new login id
 
 
@@ -16,15 +16,15 @@ AdminValidator.INVALID_EMAIL_FORMAT = The format of email id entered is incorrec
 AdminValidator.INVALID_PASSWORD_FORMAT = Password should have at least one upper case, one lower case, one number, one special character and should be of 6 to 20 characters.
 AdminValidator.INVALID_NAME = The Admin's name is not in proper format.
 AdminValidator.INVALID_LOGINID = The Admin's login id should have at least 6 characters but no more than 15 characters
-AdminValidator.INVALID_EMAIL_FORMAT_FOR_LOGIN = Email id or password is incorrect.
-AdminValidator.INVALID_PASSWORD_FORMAT_FOR_LOGIN = Email id or password is incorrect. 
+AdminValidator.INVALID_LOGINID_FORMAT_FOR_LOGIN = Login id or password is incorrect.
+AdminValidator.INVALID_PASSWORD_FORMAT_FOR_LOGIN = Login id or password is incorrect. 
 
 TravelerValidator.INVALID_EMAIL_FORMAT = The format of email id entered is incorrect.
 TravelerValidator.INVALID_PASSWORD_FORMAT = Password should have at least one upper case, one lower case, one number, one special character and should be of 6 to 20 characters.
 TravelerValidator.INVALID_NAME = Traveler name is not in proper format.
 TravelerValidator.INVALID_LOGINID = The Traveler's login id should have at least 6 characters but no more than 15 characters
-TravelerValidator.INVALID_EMAIL_FORMAT_FOR_LOGIN = Email id or password is incorrect.
-TravelerValidator.INVALID_PASSWORD_FORMAT_FOR_LOGIN = Email id or password is incorrect. 
+TravelerValidator.INVALID_LOGINID_FORMAT_FOR_LOGIN = Login id or password is incorrect.
+TravelerValidator.INVALID_PASSWORD_FORMAT_FOR_LOGIN = Login id or password is incorrect. 
 
 
 #---------------------API MESSAGES --------------------------------
