--- a/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
+++ b/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
@@ -30,7 +30,7 @@ TravelerValidator.INVALID_PASSWORD_FORMAT_FOR_LOGIN = Email id or password is in
 #---------------------API MESSAGES --------------------------------
 
 TravelerAPI.TRAVELER_REGISTRATION_SUCCESS = You are successfully registered as Traveler with Login Id: 
-
+BookingAPI.NEW_BOOKING_SUCCESS = New booking successfully created.
 
 AdminAPI.ADMIN_REGISTRATION_SUCCESS = You are successfully registered as Admin with Login Id: 
 
