finished adding validator and exception catching

--- a/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
+++ b/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
@@ -26,6 +26,7 @@ TravelerValidator.INVALID_LOGINID = The Traveler's login id should have at least
 TravelerValidator.INVALID_EMAIL_FORMAT_FOR_LOGIN = Email id or password is incorrect.
 TravelerValidator.INVALID_PASSWORD_FORMAT_FOR_LOGIN = Email id or password is incorrect. 
 
+BookingValidator.FIELD_IS_NULL = A field was left null.
 
 #---------------------API MESSAGES --------------------------------
 
