--- a/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
+++ b/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
@@ -10,6 +10,11 @@ AdminService.LOGIN_ID_ALREADY_IN_USE = The login id is already in use. Please tr
 TravelerService.INVALID_CREDENTIALS = Login id or password is incorrect.
 TravelerService.LOGIN_ID_ALREADY_IN_USE = The login id is already in use. Please try with a new login id
 
+FlightService.FLIGHT_ID_ALREADY_EXISTS = The flight already exists in the table
+FlightService.NO_FLIGHTS_IN_TABLE = There are no flights in the table
+
+AirprotService.AIRPORT_ID_ALREADY_EXISTS = The airport already exists in the table
+AirportService.NO_AIRPORTS_IN_TABLE = There are no airports in the table
 
 #-----------VALIDATOR EXCEPTIONS-------------------
 AdminValidator.INVALID_EMAIL_FORMAT = The format of email id entered is incorrect.
@@ -34,4 +39,10 @@ TravelerAPI.TRAVELER_REGISTRATION_SUCCESS = You are successfully registered as T
 
 AdminAPI.ADMIN_REGISTRATION_SUCCESS = You are successfully registered as Admin with Login Id: 
 
+
+AirportAPI.AIRPORT_ADDED_SUCCESSFULLY = Successfully added new airport
+AirportAPI.AIRPORT_DELETED_SUCCESSFULLY = Successfully deleted airport
+
+FlightAPI.FLIGHT_ADDED_SUCCESSFULLY = Successfully added new flight
+FlightAPI.FLIGHT_DELETED_SUCCESSFULLY = Successfully deleted flight
 
