booking working properly

--- a/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
+++ b/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
@@ -36,7 +36,7 @@ BookingValidator.FIELD_IS_NULL = A field was left null.
 #---------------------API MESSAGES --------------------------------
 
 TravelerAPI.TRAVELER_REGISTRATION_SUCCESS = You are successfully registered as Traveler with Login Id: 
-BookingAPI.NEW_BOOKING_SUCCESS = New booking successfully created.
+BookingAPI.NEW_BOOKING_SUCCESS = New booking successfully created with ID: 
 
 AdminAPI.ADMIN_REGISTRATION_SUCCESS = You are successfully registered as Admin with Login Id: 
 
