--- a/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
+++ b/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
@@ -31,7 +31,11 @@ TravelerValidator.INVALID_LOGINID = The Traveler's login id should have at least
 TravelerValidator.INVALID_LOGINID_FORMAT_FOR_LOGIN = Login id or password is incorrect.
 TravelerValidator.INVALID_PASSWORD_FORMAT_FOR_LOGIN = Login id or password is incorrect. 
 
-BookingValidator.FIELD_IS_NULL = A field was left null.
+BookingValidator.COST_IS_NULL = Cost was left null.
+BookingValidator.NUMBER_OF_TRAVELERS_IS_NULL = Number of travelers was left null.
+BookingValidator.FLIGHT_IS_NULL = Flight was left null.
+BookingValidator.TRAVELER_IS_NULL = The traveler was left null.
+BookingValidator.DATE_IS_NULL = The date of travel was left null.
 
 #---------------------API MESSAGES --------------------------------
 
