--- a/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
+++ b/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
@@ -16,6 +16,7 @@ FlightService.NO_FLIGHTS_IN_TABLE = There are no flights in the table
 AirprotService.AIRPORT_ID_ALREADY_EXISTS = The airport already exists in the table
 AirportService.NO_AIRPORTS_IN_TABLE = There are no airports in the table
 
+BookingService.NULL_FIELD = "A field was left null in the booking, booking has failed."
 #-----------VALIDATOR EXCEPTIONS-------------------
 AdminValidator.INVALID_EMAIL_FORMAT = The format of email id entered is incorrect.
 AdminValidator.INVALID_PASSWORD_FORMAT = Password should have at least one upper case, one lower case, one number, one special character and should be of 6 to 20 characters.
