--- a/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
+++ b/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
@@ -6,9 +6,11 @@ GENERAL_MESSAGE=Something went wrong, please check the log.
 
 AdminService.INVALID_CREDENTIALS = Login id or password is incorrect.
 AdminService.LOGIN_ID_ALREADY_IN_USE = The login id is already in use. Please try with a new login id
+AdminService.USER_NOT_FOUND = User not found with username: 
 
 TravelerService.INVALID_CREDENTIALS = Login id or password is incorrect.
 TravelerService.LOGIN_ID_ALREADY_IN_USE = The login id is already in use. Please try with a new login id
+TravelerService.USER_NOT_FOUND = User not found with username: 
 
 FlightService.FLIGHT_ID_ALREADY_EXISTS = The flight already exists in the table
 FlightService.NO_FLIGHTS_IN_TABLE = There are no flights in the table
