added optionals to booking, some API information

--- a/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
+++ b/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
@@ -42,6 +42,8 @@ TravelerValidator.INVALID_PASSWORD_FORMAT_FOR_LOGIN = Login id or password is in
 
 
 TravelerAPI.TRAVELER_REGISTRATION_SUCCESS = You are successfully registered as Traveler with Login Id: 
+
+BookingAPI.BOOKING_IS_NULL = Booking failed, please try again.
 BookingAPI.NEW_BOOKING_SUCCESS = New booking successfully created with ID: 
 
 AdminAPI.ADMIN_REGISTRATION_SUCCESS = You are successfully registered as Admin with Login Id:   
