--- a/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
+++ b/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
@@ -15,7 +15,7 @@ FlightService.NO_FLIGHTS_IN_TABLE = There are no flights in the table
 FlightService.FLIGHT_ID_DOES_NOT_EXIST = The flight to remove does not exist in the table
 FlightService.NULL_FIELD = A field was left null for the flight, add flight failed
 
-AirprotService.AIRPORT_ID_ALREADY_EXISTS = The airport already exists in the table
+AirportService.AIRPORT_ID_ALREADY_EXISTS = The airport already exists in the table
 AirportService.NO_AIRPORTS_IN_TABLE = There are no airports in the table
 AirportService.AIRPORT_ID_DOES_NOT_EXIST = The airport to remove does not exist in the table
 AirportService.NULL_FIELD = A field was left null for the airport, add airport failed
