--- a/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
+++ b/verizon_group_project/verizon_group_project/src/main/resources/messages.properties
@@ -2,6 +2,13 @@
 
 GENERAL_MESSAGE=Something went wrong, please check the log.
 
+#-----------DAO EXCEPTIONS-----------------------
+AirportDAO.AIRPORT_ID_DOES_NOT_EXIST = The airport to remove does not exist in the table.
+AirportDAO.FAILED_TO_REMOVE_AIRPORT = Failed to remove airport.
+
+FlightDAO.FLIGHT_ID_DOES_NOT_EXIST = The flight to remove does not exist in the table.
+FlightDAO.FAILED_TO_REMOVE_FLIGHT = Failed to remove flight.
+
 #-----------SERVICE EXCEPTIONS-------------------
 
 AdminService.INVALID_CREDENTIALS = Login id or password is incorrect.
@@ -10,15 +17,15 @@ AdminService.LOGIN_ID_ALREADY_IN_USE = The login id is already in use. Please tr
 TravelerService.INVALID_CREDENTIALS = Login id or password is incorrect.
 TravelerService.LOGIN_ID_ALREADY_IN_USE = The login id is already in use. Please try with a new login id
 
-FlightService.FLIGHT_ID_ALREADY_EXISTS = The flight already exists in the table
-FlightService.NO_FLIGHTS_IN_TABLE = There are no flights in the table
-FlightService.FLIGHT_ID_DOES_NOT_EXIST = The flight to remove does not exist in the table
-FlightService.NULL_FIELD = A field was left null for the flight, add flight failed
+FlightService.FLIGHT_ID_ALREADY_EXISTS = The flight already exists in the table.
+FlightService.NO_FLIGHTS_IN_TABLE = There are no flights in the table.
+FlightService.FLIGHT_ID_DOES_NOT_EXIST = The flight to remove does not exist in the table.
+FlightService.NULL_FIELD = A field was left null for the flight, add flight failed.
 
-AirprotService.AIRPORT_ID_ALREADY_EXISTS = The airport already exists in the table
-AirportService.NO_AIRPORTS_IN_TABLE = There are no airports in the table
-AirportService.AIRPORT_ID_DOES_NOT_EXIST = The airport to remove does not exist in the table
-AirportService.NULL_FIELD = A field was left null for the airport, add airport failed
+AirprotService.AIRPORT_ID_ALREADY_EXISTS = The airport already exists in the table.
+AirportService.NO_AIRPORTS_IN_TABLE = There are no airports in the table.
+AirportService.AIRPORT_ID_DOES_NOT_EXIST = The airport to remove does not exist in the table.
+AirportService.NULL_FIELD = A field was left null for the airport, add airport failed.
 
 BookingService.NULL_FIELD = "A field was left null in the booking, booking has failed."
 #-----------VALIDATOR EXCEPTIONS-------------------
@@ -48,9 +55,15 @@ BookingAPI.NEW_BOOKING_SUCCESS = New booking successfully created with ID:
 
 AdminAPI.ADMIN_REGISTRATION_SUCCESS = You are successfully registered as Admin with Login Id:   
 
-AirportAPI.AIRPORT_ADDED_SUCCESSFULLY = Successfully added new airport
-AirportAPI.AIRPORT_DELETED_SUCCESSFULLY = Successfully deleted airport
+AirportAPI.AIRPORT_ADDED_SUCCESSFULLY = Successfully added new airport with ID:
+AirportAPI.AIRPORT_DELETED_SUCCESSFULLY = Successfully deleted airport with ID:
+AirportAPI.AIRPORT_ID_DOES_NOT_EXIST = The airport to remove does not exist in the table.
+AirportAPI.NULL_FIELD = A field was left null for the airport, add airport failed.
+AirportAPI.NO_AIRPORTS_IN_TABLE = There are no airports in the table.
 
-FlightAPI.FLIGHT_ADDED_SUCCESSFULLY = Successfully added new flight
-FlightAPI.FLIGHT_DELETED_SUCCESSFULLY = Successfully deleted flight
+FlightAPI.FLIGHT_ADDED_SUCCESSFULLY = Successfully added new flight with ID:
+FlightAPI.FLIGHT_DELETED_SUCCESSFULLY = Successfully deleted flight with ID:
+FlightAPI.FLIGHT_ID_DOES_NOT_EXIST = The flight to remove does not exist in the table.
+FlightAPI.NULL_FIELD = A field was left null for the flight, add flight failed.
+FlightAPI.NO_FLIGHTS_IN_TABLE = There are no flights in the table.
 
